<resources>
    <string name="app_name">إقرأ</string>
    <string name="book_market">Bookmark</string>

    <string name="listen_book">Listen Book</string>
    <string name="book_size">Size</string>
    <string name="launched">Launched</string>
    <string name="book_genre">Genre</string>
    <string name="notification_title">Download</string>
    <string name="notification_description_download">Downloading %1$s…</string>
    <string name="notification_description_completed">%1$s downloaded.</string>
    <string name="greatUser">Hi,%1$s .</string>
    <string name="book_summary">Summary</string>
    <string name="some_bigtext" translatable="false">E_Book E_Book E_Book E_Book E_Book E_Book E_Book v v E_Book E_Book E_Book E_Book E_Book E_Book E_Book v  E_Book E_Book E_Book E_Book E_Book E_Book v E_Book E_Book E_Book E_Book E_Book E_Book E_Bookv E_Book E_Book E_Book E_BookE_Book E_Book E_Book E_BookE_Book v E_Book v E_Book E_Book vvvE_Book E_Book E_Book vv E_Book E_Book E_Book vv E_Book v vv E_Book  E_BookE_BookE_Book E_Book E_Book E_Book E_Book E_Book vv v E_Book vvv v v E_Book E_Book v  v v v v v v  v E_Bookv E_Book  v E_BookE_Book E_Book v v v E_Book v E_Bookvv vvv vE_BookE_Book E_BookE_Book E_BookE_Book E_BookE_BookE_BookE_Book</string>
    <string name="library">Library</string>
    <string name="favorites">Favorites</string>
    <string name="setting">Settings</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="Account">Account</string>
    <string name="genegal">General</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="about">About This app</string>
    <string name="by_karim">By Abdelkrim Mesghouni</string>
    <string name="version">App version: 0.0.1</string>
    <string name="welcome">Welcome</string>
    <string name="what_are_you_interested_in">What are you interested in?</string>
    <string name="food">Food</string>
    <string name="history">History</string>
    <string name="memoir">Memoir</string>
    <string name="politics">politics</string>
    <string name="art">Art</string>
    <string name="money">Money</string>
    <string name="technology">Technology</string>
    <string name="programming">Programming</string>
    <string name="health">Health</string>
    <string name="productivity">Productivity</string>
    <string name="economy">Economy</string>
    <string name="self_help">Self-Help</string>
    <string name="young_adult">Young Adult</string>
    <string name="children">Children\'s Books</string>
    <string name="crime_thriller">Crime Thriller</string>
    <string name="literary_fiction">Literary Fiction</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="done">Next</string>
    <string name="google_signin">Sign in with Google</string>
    <string name="notyet">Not yet</string>
    <string name="download_completed">Download completed</string>
    <string name="download_failed">Download failed</string>
    <string name="check_your_connection">Check your internet connection</string>

    <string name="you_show_select_atleast">You should select at least 3 typs.</string>
    <string name="downloads">Downloads</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Please search</string>
    <string name="search" translatable="false">Search</string>
    <string name="logout" translatable="false">Sign out</string>
    <string name="you_want_sing_out" translatable="false">Are you that you want to sign out</string>
    <string name="download">Download</string>
    <string name="already_downloaded">Book already downloaded</string>
</resources>